--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 // Header component
 import { Image } from 'astro:assets';
-import logoImage from '../../public/logo.png';
+import logoImage from '../../public/seguros-monterrey-new-york-life-logo.png';
 
 const segurosIndividuales = [
   { 
@@ -47,7 +47,6 @@ const paginasPrincipales = [
       <!-- Logos -->
       <a href="/" class="flex items-center flex-shrink-0">
         <div class="flex items-center space-x-2 sm:space-x-3">
-          <img src="/Logo_New_York_Life.svg" alt="New York Life" class="h-12 sm:h-12 w-auto object-contain" />
           <Image 
             src={logoImage} 
             alt="Seguros RP" 
