--- a/src/pages/segubecalanding/index.astro
+++ b/src/pages/segubecalanding/index.astro
@@ -8,6 +8,15 @@ import ContactSeguBeca from '../../components/ContactSeguBeca.astro';
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17382344046"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17382344046');
+</script>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   
   <!-- Bloquear indexación -->
